--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -16,7 +16,7 @@
                   <span class="fas fa-envelope"></span>
                 </div>
               </div>
-              <p *ngIf="enviado && form.controls.correo.hasError('required')" class="text-danger w-100 mb-0" >Debes Ingresar Correo</p>
+              <p *ngIf="enviado && form.controls.correo.hasError('required')" class="text-danger w-100 mb-0" >Debes Ingresar un Correo</p>
               <p *ngIf="enviado && form.controls.correo.hasError('email')" class="text-danger w-100 mb-0" >Ingresa un Correo Valido</p>
             </div>
             <div class="input-group mb-3">
