--- a/src/app/components/modalcrearusuario/modalcrearusuario.component.html
+++ b/src/app/components/modalcrearusuario/modalcrearusuario.component.html
@@ -1,9 +1,9 @@
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <form [formGroup]="form" (submit)="CrearUsuario()">
+<div class="modal fade" id="crearusuario" tabindex="-1" role="dialog" aria-labelledby="crearusuarioLabel" aria-hidden="true">
+    <form [formGroup]="form" (submit)="CrearUsuario(btnCrearClose)">
         <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Crear Usuario</h5>
+          <h5 class="modal-title" id="crearusuarioLabel">Crear Usuario</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -12,31 +12,43 @@
             <div class="form-group">
               <label for="recipient-name" class="col-form-label">Nombres:</label>
               <input type="text" class="form-control" id="recipient-name" formControlName="nombres"  class="form-control" placeholder="Nombres">
-              <p *ngIf="enviado && form.controls.nombres.hasError('required')" class="text-danger w-100 mb-0" >Debes Ingresar la Nombres</p>
+              <p *ngIf="enviado && form.controls.nombres.hasError('required')" class="text-danger w-100 mb-0" >Debes Ingresar los Nombres</p>
             </div>
             <div class="form-group">
                 <label for="recipient-name" class="col-form-label">Apellidos:</label>
                 <input type="text" class="form-control" id="recipient-name" formControlName="apellidos"  class="form-control" placeholder="Apellidos">
-                <p *ngIf="enviado && form.controls.apellidos.hasError('required')" class="text-danger w-100 mb-0" >Debes Ingresar la Apellidos</p>
+                <p *ngIf="enviado && form.controls.apellidos.hasError('required')" class="text-danger w-100 mb-0" >Debes Ingresar los Apellidos</p>
             </div>
             <div class="form-group">
               <label for="recipient-name" class="col-form-label">Cédula:</label>
-              <input type="text" class="form-control" id="recipient-name" formControlName="cedula"  class="form-control" placeholder="Cédula">
+              <input maxlength="12" type="text" class="form-control" id="recipient-name" formControlName="cedula"  class="form-control" placeholder="Cédula">
               <p *ngIf="enviado && form.controls.cedula.hasError('required')" class="text-danger w-100 mb-0" >Debes Ingresar la Cédula</p>
+              <p *ngIf="enviado && form.controls.cedula.hasError('minlength')" class="text-danger w-100 mb-0" >La cédula debe contener al menos 5 caracteres</p>
+              <p *ngIf="enviado && form.controls.cedula.hasError('maxlength')" class="text-danger w-100 mb-0" >La cédula debe contener máximo 12 caracteres</p>
+              <p *ngIf="enviado && form.controls.cedula.hasError('pattern')" class="text-danger w-100 mb-0" >La cédula debe contener solo números</p>
             </div>
             <div class="form-group">
               <label for="recipient-name" class="col-form-label">Correo:</label>
-              <input type="text" class="form-control" id="recipient-name" formControlName="correo" type="email" class="form-control" placeholder="Correo">
-              <p *ngIf="enviado && form.controls.correo.hasError('required')" class="text-danger w-100 mb-0" >Debes Ingresar la Correo</p>
+              <input type="email" class="form-control" id="recipient-name" formControlName="correo" type="email" class="form-control" placeholder="Correo">
+              <p *ngIf="enviado && form.controls.correo.hasError('required')" class="text-danger w-100 mb-0" >Debes Ingresar un  Correo</p>
+              <p *ngIf="enviado && form.controls.correo.hasError('email')" class="text-danger w-100 mb-0" >Ingresa un Correo Valido</p>
             </div>
             <div class="form-group">
               <label for="recipient-name" class="col-form-label">Teléfono:</label>
-              <input type="text" class="form-control" id="recipient-name" formControlName="telefono"  class="form-control" placeholder="Teléfono">
-              <p *ngIf="enviado && form.controls.telefono.hasError('required')" class="text-danger w-100 mb-0" >Debes Ingresar la Telefono</p>
+              <input maxlength="10" type="text" class="form-control" id="recipient-name" formControlName="telefono"  class="form-control" placeholder="Teléfono">
+              <p *ngIf="enviado && form.controls.telefono.hasError('required')" class="text-danger w-100 mb-0" >Debes Ingresar  un Telefono</p>
+              <p *ngIf="enviado && form.controls.telefono.hasError('pattern')" class="text-danger w-100 mb-0" >Este campo debe contener solo numeros</p>
+              <p *ngIf="enviado && form.controls.telefono.hasError('maxlength')" class="text-danger w-100 mb-0" >La cédula debe contener máximo 10 caracteres</p>
+            </div>
+            <div class="alert alert-success" role="alert" *ngIf="success">
+              El usuario a sido creado satisfactoriamente.
+            </div>
+            <div class="alert alert-danger" role="alert" *ngIf="error">
+              {{ error }}
             </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+          <button type="button" class="btn btn-secondary" #btnCrearClose data-dismiss="modal">Cerrar</button>
           <button type="submit" class="btn btn-success">Crear</button>
         </div>
       </div>
