--- a/src/app/components/usuarios/usuarios.component.html
+++ b/src/app/components/usuarios/usuarios.component.html
@@ -1,134 +1,36 @@
-<div class="wrapper">
-    <!-- Navbar -->
+<div class="wrapper backgound ">
+  
+  <!-- Navbar -->
   <nav class="main-header navbar navbar-expand navbar-white navbar-light">
     <!-- Left navbar links -->
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
       </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="../../index3.html" class="nav-link">Home</a>
-      </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="#" class="nav-link">Contact</a>
-      </li>
     </ul>
 
-    
-    <!-- Right navbar links -->
-    <ul class="navbar-nav ml-auto">
-      <!-- Messages Dropdown Menu -->
-      <li class="nav-item dropdown">
-        <a class="nav-link" data-toggle="dropdown" href="#">
-          <i class="far fa-comments"></i>
-          <span class="badge badge-danger navbar-badge">3</span>
-        </a>
-        <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-          <a href="#" class="dropdown-item">
-            <!-- Message Start -->
-            <div class="media">
-              <img src="../assets/template/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
-              <div class="media-body">
-                <h3 class="dropdown-item-title">
-                  Brad Diesel
-                  <span class="float-right text-sm text-danger"><i class="fas fa-star"></i></span>
-                </h3>
-                <p class="text-sm">Call me whenever you can...</p>
-                <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 4 Hours Ago</p>
-              </div>
-            </div>
-            <!-- Message End -->
-          </a>
-          <div class="dropdown-divider"></div>
-          <a href="#" class="dropdown-item">
-            <!-- Message Start -->
-            <div class="media">
-              <img src="../assets/template/img/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
-              <div class="media-body">
-                <h3 class="dropdown-item-title">
-                  John Pierce
-                  <span class="float-right text-sm text-muted"><i class="fas fa-star"></i></span>
-                </h3>
-                <p class="text-sm">I got your message bro</p>
-                <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 4 Hours Ago</p>
-              </div>
-            </div>
-            <!-- Message End -->
-          </a>
-          <div class="dropdown-divider"></div>
-          <a href="#" class="dropdown-item">
-            <!-- Message Start -->
-            <div class="media">
-              <img src="../assets/template/img/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
-              <div class="media-body">
-                <h3 class="dropdown-item-title">
-                  Nora Silvester
-                  <span class="float-right text-sm text-warning"><i class="fas fa-star"></i></span>
-                </h3>
-                <p class="text-sm">The subject goes here</p>
-                <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 4 Hours Ago</p>
-              </div>
-            </div>
-            <!-- Message End -->
-          </a>
-          <div class="dropdown-divider"></div>
-          <a href="#" class="dropdown-item dropdown-footer">See All Messages</a>
-        </div>
-      </li>
-      <!-- Notifications Dropdown Menu -->
-      <li class="nav-item dropdown">
-        <a class="nav-link" data-toggle="dropdown" href="#">
-          <i class="far fa-bell"></i>
-          <span class="badge badge-warning navbar-badge">15</span>
-        </a>
-        <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-          <span class="dropdown-item dropdown-header">15 Notifications</span>
-          <div class="dropdown-divider"></div>
-          <a href="#" class="dropdown-item">
-            <i class="fas fa-envelope mr-2"></i> 4 new messages
-            <span class="float-right text-muted text-sm">3 mins</span>
-          </a>
-          <div class="dropdown-divider"></div>
-          <a href="#" class="dropdown-item">
-            <i class="fas fa-users mr-2"></i> 8 friend requests
-            <span class="float-right text-muted text-sm">12 hours</span>
-          </a>
-          <div class="dropdown-divider"></div>
-          <a href="#" class="dropdown-item">
-            <i class="fas fa-file mr-2"></i> 3 new reports
-            <span class="float-right text-muted text-sm">2 days</span>
-          </a>
-          <div class="dropdown-divider"></div>
-          <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
-          <i class="fas fa-th-large"></i>
-        </a>
-      </li>
-    </ul>
   </nav>
   <!-- /.navbar -->
-  <aside class="main-sidebar sidebar-dark-primary elevation-4">
+
+  <aside class="main-sidebar sidebar-dark-primary elevation-4 backgound">
     <!-- Brand Logo -->
-    <a href="../../index3.html" class="brand-link">
-      <img src="../assets/template/img/AdminLTELogo.png"
-           alt="AdminLTE Logo"
-           class="brand-image img-circle elevation-3"
+    <a href="" class="brand-link">
+      <img src="../assets/images/logoeml.png"
+           alt=""
+           class="w-100"
            style="opacity: .8">
-      <span class="brand-text font-weight-light">AdminLTE 3</span>
     </a>
 
     <!-- Sidebar -->
     <div class="sidebar">
-      <!-- Sidebar user (optional) -->
-      <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+
+      <div class="user-panel mt-3 pb-3 mb-3 d-flex align-items-center">
         <div class="image">
-          <img src="../assets/template/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+          <img src="https://admin.gioto.com.co/assets/images/default_user.png" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
-          <a href="#" class="d-block">Alexander Pierce</a>
+          <a href="#" class="d-block">{{ userName }}</a>
+          <a href="#" class="d-block">{{ email }}</a>
         </div>
       </div>
 
@@ -142,6 +44,20 @@
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
                 Usuarios
+              </p>
+            </a>
+           </li>
+        </ul>
+      </nav>
+      <nav class="mt-2">
+        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+          <!-- Add icons to the links using the .nav-icon class
+               with font-awesome or any other icon font library -->
+          <li class="nav-item" (click)="Salir() ">
+            <a href="#" class="nav-link">
+              <i class="mr-2 ml-1 fas fa-sign-out-alt"></i>
+              <p>
+                Cerrar Sesión
               </p>
             </a>
            </li>
@@ -176,11 +92,11 @@
           <div class="col-12">
             <div class="card">
               <div class="card-header text-right">
-                <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">Crear Usuario <i class="fas fa-plus ml-2"></i></button>
+                <button type="button" class="btn btn-success" data-toggle="modal" data-target="#crearusuario">Crear Usuario <i class="fas fa-plus ml-2"></i></button>
               </div>
               <!-- /.card-header -->
               <div class="card-body">
-                <table id="example2" class="table table-bordered table-hover">
+                <table id="example2" class="table table-bordered table-hover table-responsive-lg">
                   <thead>
                   <tr>
                     <th>ID</th>
@@ -189,7 +105,7 @@
                     <th>Cédula</th>
                     <th>Correo</th>
                     <th>Teléfono</th>
-                    <th>Fecha de registró</th>
+                    <th>Fecha de registro</th>
                     <th>Fecha de modificación</th>
                     <th></th>
                   </tr>
@@ -205,15 +121,10 @@
                     <td>{{ item.fecha_de_registro }}</td>
                     <td>{{ item.fecha_de_modificacion }}</td>
                     <td>
-                      <div class="btn-group">
-                        <button type="button" class="btn btn-default dropdown-toggle dropdown-icon" data-toggle="dropdown">
-                          <span class="sr-only">Toggle Dropdown</span>
-                          <div class="dropdown-menu  dropdown-menu-right" role="menu">
-                            <a class="dropdown-item" href="#">Editar</a>
-                            <a class="dropdown-item bg-danger" href="#">Eliminnar</a>
-                          </div>
-                        </button>
-                      </div>
+                      <button type="button" class="btn btn-warning mr-3" data-toggle="modal" [attr.data-target]="'#editar'+item.id"><i class="fas fa-edit"></i></button>
+                      <button type="button" class="btn btn-danger mr-3" data-toggle="modal" [attr.data-target]="'#delete'+item.id"><i class="fas fa-trash"></i></button>
+                      <app-modaleditarusuario (getUsers)="getUsuarios()" [data]="item"></app-modaleditarusuario>
+                      <app-deleteusuario (getUsers)="getUsuarios()" [data]="item"></app-deleteusuario>
                     </td>
                   </tr>
                   </tbody>
@@ -232,11 +143,7 @@
     <!-- /.content -->
   </div>
   <footer class="main-footer">
-    <div class="float-right d-none d-sm-block">
-      <b>Version</b> 3.0.5
-    </div>
-    <strong>Copyright &copy; 2014-2019 <a href="http://adminlte.io">AdminLTE.io</a>.</strong> All rights
-    reserved.
+    
   </footer>
     <!-- Control Sidebar -->
     <aside class="control-sidebar control-sidebar-dark">
@@ -245,4 +152,5 @@
       <!-- /.control-sidebar -->
 </div>
 <!-- /.content-wrapper -->
-<app-modalcrearusuario></app-modalcrearusuario>
+<app-modalcrearusuario (getUsers)="getUsuarios()"></app-modalcrearusuario>
+<app-loading *ngIf="IsLoading"></app-loading>
